--- a/_plop/utils/{{properCase name}}Util/index.ts.hbs
+++ b/_plop/utils/{{properCase name}}Util/index.ts.hbs
@@ -1,3 +1,1 @@
-import { {{properCase name}}Service } from './{{properCase name}}Service'
-
-export default new {{properCase name}}Service()
+export { {{properCase name}}Util as default } from './{{properCase name}}Util'
