changes on scaffolding files and generated new utils

--- a/_plop/utils/{{properCase name}}Util/index.ts.hbs
+++ b/_plop/utils/{{properCase name}}Util/index.ts.hbs
@@ -1,1 +1,1 @@
-export { {{properCase name}}Util as default } from './{{properCase name}}Util'
+export { {{camelCase name}}Util as default } from './{{camelCase name}}Util'
