Implements light mode

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,3 +3,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    :root {
+        --color-primary-50: #F0F3F5;
+        --color-primary-100: #E1E7EB;
+        --color-primary-200: #B8C5CF;
+        --color-primary-300: #90A2B0;
+        --color-primary-400: #516175;
+        --color-primary-500: #20293A;
+        --color-primary-600: #1B2436;
+        --color-primary-700: #12192B;
+        --color-primary-800: #0C1324;
+        --color-primary-900: #060B1A;
+        --color-primary-950: #030612;
+    }
+    .dark {
+        --color-primary-50: #e1faff;
+        --color-primary-100: #cbf0ff;
+        --color-primary-200: #9adeff;
+        --color-primary-300: #64cbff;
+        --color-primary-400: #3bbcfe;
+        --color-primary-500: #50A1FF;
+        --color-primary-600: #50A1FF;
+        --color-primary-700: #0097e4;
+        --color-primary-800: #0086cd;
+        --color-primary-900: #0075b5;
+    }
+}
