--- a/src/lib/styles/markdown_modest.scss
+++ b/src/lib/styles/markdown_modest.scss
@@ -116,7 +116,9 @@
 		font-size: 1rem;
 		margin-bottom: 1.3rem;
 	}
-
+	li {
+    		list-style-type: disc;
+	}
 	h1,
 	.modest-h1,
 	h2,
@@ -212,7 +214,6 @@
 		border-bottom: 2px solid #fafafa;
 		margin-bottom: 1.15rem;
 		padding-bottom: 0.5rem;
-		text-align: center;
 	}
 
 	blockquote {
