--- a/src/lib/styles/markdown_modest.scss
+++ b/src/lib/styles/markdown_modest.scss
@@ -196,6 +196,10 @@
 		line-height: 1.45;
 		padding: 0.25rem;
 	}
+	
+	li {
+    		list-style-type: disc;
+	}
 
 	h1,
 	h2,
@@ -212,7 +216,6 @@
 		border-bottom: 2px solid #fafafa;
 		margin-bottom: 1.15rem;
 		padding-bottom: 0.5rem;
-		text-align: center;
 	}
 
 	blockquote {
