--- a/src/lib/styles/markdown_modest.scss
+++ b/src/lib/styles/markdown_modest.scss
@@ -178,9 +178,9 @@
 		max-width: 100%;
 	}
 
-	@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700);
+	@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700);
 
-	@import url(http://fonts.googleapis.com/css?family=Arimo:700,700italic);
+	@import url(https://fonts.googleapis.com/css?family=Arimo:700,700italic);
 
 	html {
 		font-size: 18px;
