--- a/src/lib/styles/markdown_modest.scss
+++ b/src/lib/styles/markdown_modest.scss
@@ -236,4 +236,14 @@
     		font-size: 0.9em;
     		color: #fff;
 	}
+	codeline {
+		display: block;
+    		position: relative;
+    		background: rgb(36, 35, 46);
+   		border-radius: 5px;
+	        margin: 1rem 0px;
+	    	padding: 1rem;
+	     	overflow-y: scroll;
+	     	font-size: 0.9em;
+		color: #fff;
 }
