--- a/src/lib/styles/markdown_modest.scss
+++ b/src/lib/styles/markdown_modest.scss
@@ -249,7 +249,7 @@
 	}
 	@media (min-width: 1536px) {
     		.container {
-        	max-width: 900px;
+        	max-width: 900px!important;
     		}
     		nav .container {
     		max-width: 1536px!important;
