--- a/src/app.postcss
+++ b/src/app.postcss
@@ -31,3 +31,11 @@
         --color-primary-900: #0075b5;
     }
 }
+	@media (min-width: 1536px) {
+    		.container {
+        	max-width: 1100px!important;
+    		}
+    		nav .container {
+    		max-width: 1536px!important;
+		}
+	}
