--- a/src/app.postcss
+++ b/src/app.postcss
@@ -31,6 +31,8 @@
         --color-primary-900: #0075b5;
     }
 }
+
+/* Reduce the width on large screens */
 	@media (min-width: 1536px) {
     		.container {
         	max-width: 1100px!important;
@@ -38,4 +40,31 @@
     		nav .container {
     		max-width: 1536px!important;
 		}
+	}
+
+
+/* Load bittopia custom fonts */
+	@font-face {
+		font-family: Trenda;
+		src: url(/fonts/trenda-reg.woff);
+		font-weight: 400;
+	    font-display: swap;
+	}
+	@font-face {
+		font-family: Trenda;
+		src: url(/fonts/trenda-light.woff);
+		font-weight: 100;
+	    font-display: swap;
+	}
+	@font-face {
+		font-family: Trenda;
+		src: url(/fonts/trenda-bold.woff);
+		font-weight: 700;
+	    font-display: swap;
+	}
+	@font-face {
+		font-family: Trenda;
+		src: url(/fonts/trenda-black.woff);
+		font-weight: 900;
+	    font-display: swap;
 	}
