--- a/src/app.postcss
+++ b/src/app.postcss
@@ -31,8 +31,13 @@
         --color-primary-900: #0075b5;
     }
 }
+/* DAS Description Color */
+	das-des {
+		color: #87868c;
+		}
 
 /* Reduce the width on large screens */
+
 	@media (min-width: 1536px) {
     		.container {
         	max-width: 1100px!important;
@@ -44,6 +49,7 @@
 
 
 /* Load bittopia custom fonts */
+
 	@font-face {
 		font-family: Trenda;
 		src: url(/fonts/trenda-reg.woff);
