Update DAS description color

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -33,7 +33,7 @@
 }
 /* DAS Description Color */
 	das-des {
-		color: #87868c;
+		color: #87868c!important;
 		}
 
 /* Reduce the width on large screens */
