Adjust profile title font weight

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -36,6 +36,11 @@
 		color: #87868c!important;
 		}
 
+/* Profile Title */
+	.profile-title {
+		font-weight:600!important;
+		}
+
 /* Reduce the width on large screens */
 
 	@media (min-width: 1536px) {
