--- a/src/lib/styles/markdown_modest.scss
+++ b/src/lib/styles/markdown_modest.scss
@@ -268,3 +268,7 @@ section#module-content {
   border: 1px solid #bfbfbf!important;
   background: none!important;
 }
+.rounded-full.w-36.h-36.bg-gray-100.dark\:bg-gray-600.text-gray-600.dark\:text-gray-300 {
+  object-fit: cover!important;
+  object-position: top;
+}
