--- a/src/lib/styles/markdown_modest.scss
+++ b/src/lib/styles/markdown_modest.scss
@@ -256,19 +256,22 @@
 		color: #fff;
 	}
 }
-section#module-content {
-    color: #87868c !important;
-}
-
-:is(.dark .dark\:text-white) {
-  --tw-text-opacity: 1;
-  color: rgb(223, 223, 223)!important;
-}
-:is(.dark .dark\:bg-primary-600) {
-  border: 1px solid #bfbfbf!important;
-  background: none!important;
-}
-.rounded-full.w-36.h-36.bg-gray-100.dark\:bg-gray-600.text-gray-600.dark\:text-gray-300 {
-  object-fit: cover!important;
-  object-position: top;
-}
+	section#module-content {
+	    	color: #87868c !important;
+	}
+	
+	:is(.dark .dark\:text-white) {
+	  	color: rgb(223, 223, 223)!important;
+	}
+	:is(.dark .dark\:bg-primary-600) {
+	  	border: 1px solid #bfbfbf!important;
+		background: none!important;
+	}
+	.rounded-full.w-36.h-36.bg-gray-100.dark\:bg-gray-600.text-gray-600.dark\:text-gray-300 {
+	  	object-fit: cover!important;
+	  	object-position: top;
+	  	border: 2px solid #FFF;
+	}
+	.object-cover {
+		object-fit: contain!important;
+	}
