--- a/src/lib/styles/markdown_modest.scss
+++ b/src/lib/styles/markdown_modest.scss
@@ -278,3 +278,6 @@
 	.bg-white {
 	  	background-color: #f3f2ef;
 	}
+	.dark .flex.flex-col.gap-4.p-8.rounded-xl.w-full {
+	    background: rgb(27, 31, 35)!important;
+	}
