--- a/src/lib/styles/markdown_modest.scss
+++ b/src/lib/styles/markdown_modest.scss
@@ -278,6 +278,6 @@
 	.bg-white {
 	  	background-color: #f3f2ef;
 	}
-	.dark .flex.flex-col.gap-4.p-8.rounded-xl.w-full {
+	.dark .flex.flex-col.gap-4.p-8.rounded-xl.w-full, .dark .flex.w-full.gap-6.p-4.rounded-xl {
 	    background: rgb(27, 31, 35)!important;
 	}
