--- a/src/lib/styles/markdown_modest.scss
+++ b/src/lib/styles/markdown_modest.scss
@@ -276,7 +276,7 @@
 		object-fit: contain!important;
 	}
 	.bg-white {
-	  	background-color: #f3f2ef;
+	  	background-color: #f3f2ef!important;
 	}
 	.dark #module {
 	    background: rgb(27, 31, 35)!important;
