--- a/src/app.postcss
+++ b/src/app.postcss
@@ -110,9 +110,16 @@
 	  	background-color: rgb(10 9 13 / var(--tw-bg-opacity)) !important;
 	}
 	.dark #module {
-	    background: rgb(27, 31, 35)!important;
+	    	background: rgb(27, 31, 35)!important;
 	}
 	.font-bold {
-	    font-weight: 700 !important;
+	    	font-weight: 700 !important;
 	}
 
+	.dark .join, .join, .dark .enroll, .enroll {
+		background: #1d41ae!important;
+		border: none !important;
+		color: #FFF;
+		font-weight: 900;
+		letter-spacing: 1px;
+	}
