--- a/src/app.postcss
+++ b/src/app.postcss
@@ -122,6 +122,11 @@
 		font-weight: 900;
 		letter-spacing: 1px;
 	}
-	:is(.dark .dark\:bg-primary-600) {
+	:is(.dark .dark\:bg-primary-600),  {
 		  background: #1d41ae;
 	}
+	button {
+		background: #1d41ae!important;
+		border: none !important;
+	}
+	
