--- a/src/app.postcss
+++ b/src/app.postcss
@@ -91,9 +91,6 @@
 	:is(.dark .dark\:text-white) {
 	  	color: rgb(223, 223, 223)!important;
 	}
-	:is(.dark .dark\:bg-primary-600) {
-		  background: #1d41ae!important;;
-	}
 	.rounded-full.w-36.h-36.bg-gray-100.dark\:bg-gray-600.text-gray-600.dark\:text-gray-300 {
 	  	object-fit: cover!important;
 	  	object-position: top;
@@ -115,10 +112,14 @@
 	    	font-weight: 700 !important;
 	}
 
-	.dark .join, .join, .dark .enroll, .enroll {
+	.cta-blue .join, .cta .enroll {
 		background: #1d41ae!important;
 		border: none !important;
 		color: #FFF;
 		font-weight: 900;
 		letter-spacing: 1px;
+	}
+		:is(.dark .dark\:bg-primary-600) {
+		  border: 1px solid #bfbfbf!important;
+		  background: none!important;
 	}
