--- a/src/app.postcss
+++ b/src/app.postcss
@@ -116,7 +116,7 @@
 		border: 1px solid #bfbfbf!important;
 		background: none!important;
 	}
-	.cta-blue .join, .cta-blue .enroll, .cta {
+	.cta-blue, .dark .cta-blue, .join, .dark .join, .cta-blue .enroll, .dark .cta-blue .enroll, .cta, .dark .cta {
 		background: #1d41ae!important;
 		border: none !important;
 		color: #FFF;
