--- a/src/app.postcss
+++ b/src/app.postcss
@@ -77,14 +77,19 @@
 		font-family: Trenda;
 		src: url(/fonts/trenda-black.woff);
 		font-weight: 900;
-	    font-display: swap;
+	    	font-display: swap;
 	}
 	h1, h2, h3, h4, h5 {
-	font-family: 'Trenda';
+		font-family: 'Trenda';
+		line-height: 37px;
 	}
 	h1 {
-	font-weight: 400!important;
+		font-weight: 400!important;
 	}
+	p {
+		line-height: 30px;
+	}
+		
 
 /* Custom CSS */
 
@@ -116,10 +121,11 @@
 		border: 1px solid #bfbfbf!important;
 		background: none!important;
 	}
-	.join, .dark .join, .enroll, .dark enroll, .cta, .dark .cta {
+	.join, .dark .join, .enroll, .dark .enroll, .cta, .dark .cta {
 		background: #1d41ae!important;
 		border: none !important;
 		color: #FFF;
 		font-weight: 900;
 		letter-spacing: 1px;
 	}
+	
