--- a/src/app.postcss
+++ b/src/app.postcss
@@ -122,10 +122,12 @@
 		background: none!important;
 	}
 	.join, .dark .join, .enroll, .dark .enroll, .cta, .dark .cta {
-		background: #1d41ae!important;
+		background: #1d41ae !important;
 		border: none !important;
-		color: #FFF;
+		color: #fff;
 		font-weight: 900;
 		letter-spacing: 1px;
+		padding: 15px 40px;
+		font-size: 19px;
 	}
 	
