--- a/src/app.postcss
+++ b/src/app.postcss
@@ -127,7 +127,9 @@
 		color: #fff;
 		font-weight: 900;
 		letter-spacing: 1px;
-		padding: 15px 40px;
-		font-size: 19px;
+		padding: 13px 40px;
+		font-size: 18px;
+		text-transform: uppercase;
+
 	}
 	
