--- a/src/app.postcss
+++ b/src/app.postcss
@@ -130,6 +130,9 @@
 		padding: 13px 40px;
 		font-size: 18px;
 		text-transform: uppercase;
-
+	}
+	.rounded-full {
+		object-fit: cover;
+		object-position: top;
 	}
 	
