--- a/src/app.postcss
+++ b/src/app.postcss
@@ -52,6 +52,49 @@
 		}
 	}
 
+/* Custom Margin Top Classes */
+	.mt-12 { margin-top: 3rem; }    /* 48px */
+	.mt-16 { margin-top: 4rem; }    /* 64px */
+	.mt-20 { margin-top: 5rem; }    /* 80px */
+	.mt-24 { margin-top: 6rem; }    /* 96px */
+	.mt-32 { margin-top: 8rem; }    /* 128px */
+	.mt-40 { margin-top: 10rem; }   /* 160px */
+	.mt-48 { margin-top: 12rem; }   /* 192px */
+	.mt-56 { margin-top: 14rem; }   /* 224px */
+	.mt-64 { margin-top: 16rem; }   /* 256px */
+
+/* Custom Margin Bottom Classes */
+	.mb-12 { margin-bottom: 3rem; }    /* 48px */
+	.mb-16 { margin-bottom: 4rem; }    /* 64px */
+	.mb-20 { margin-bottom: 5rem; }    /* 80px */
+	.mb-24 { margin-bottom: 6rem; }    /* 96px */
+	.mb-32 { margin-bottom: 8rem; }    /* 128px */
+	.mb-40 { margin-bottom: 10rem; }   /* 160px */
+	.mb-48 { margin-bottom: 12rem; }   /* 192px */
+	.mb-56 { margin-bottom: 14rem; }   /* 224px */
+	.mb-64 { margin-bottom: 16rem; }   /* 256px */
+
+/* Custom Padding Top Classes */
+	.pt-12 { padding-top: 3rem; }    /* 48px */
+	.pt-16 { padding-top: 4rem; }    /* 64px */
+	.pt-20 { padding-top: 5rem; }    /* 80px */
+	.pt-24 { padding-top: 6rem; }    /* 96px */
+	.pt-32 { padding-top: 8rem; }    /* 128px */
+	.pt-40 { padding-top: 10rem; }   /* 160px */
+	.pt-48 { padding-top: 12rem; }   /* 192px */
+	.pt-56 { padding-top: 14rem; }   /* 224px */
+	.pt-64 { padding-top: 16rem; }   /* 256px */
+
+/* Custom Padding Bottom Classes */
+	.pb-12 { padding-bottom: 3rem; }    /* 48px */
+	.pb-16 { padding-bottom: 4rem; }    /* 64px */
+	.pb-20 { padding-bottom: 5rem; }    /* 80px */
+	.pb-24 { padding-bottom: 6rem; }    /* 96px */
+	.pb-32 { padding-bottom: 8rem; }    /* 128px */
+	.pb-40 { padding-bottom: 10rem; }   /* 160px */
+	.pb-48 { padding-bottom: 12rem; }   /* 192px */
+	.pb-56 { padding-bottom: 14rem; }   /* 224px */
+	.pb-64 { padding-bottom: 16rem; }   /* 256px */
 
 /* Load bittopia custom fonts */
 
