--- a/src/app.postcss
+++ b/src/app.postcss
@@ -178,4 +178,9 @@
 		object-fit: cover;
 		object-position: top;
 	}
-	
+	.dark input, .dark textarea {
+		background: none !important;
+		border: 2px solid #818181 !important;
+		padding: 20px !important;
+		font-size: 18px !important;
+	}
