--- a/src/app.postcss
+++ b/src/app.postcss
@@ -184,3 +184,16 @@
 		padding: 20px !important;
 		font-size: 18px !important;
 	}
+	.dark input[type=file]::file-selector-button {
+		color:#fff;
+		background:#262c36!important;
+		padding: 15px 30px;
+		border-radius: 50px!important;
+		margin-right: 20px;
+		font-family: Trenda;
+		width: 200px;
+		height: 60px;
+		font-weight: 600;
+		font-size: 15px;
+		text-transform: uppercase;
+	}
