--- a/src/app.postcss
+++ b/src/app.postcss
@@ -200,4 +200,8 @@
 		#upload-button {
 		border: none !important;
 	}
+		.rounded-t-xl {
+		border-top-left-radius: 30px;
+		border-top-right-radius: 30px;
+	}
 
