--- a/src/app.postcss
+++ b/src/app.postcss
@@ -204,6 +204,6 @@
 		border-top-left-radius: 30px;
 		border-top-right-radius: 30px;
 	}
-		.flex.absolute.inset-y-0.left-0.items-center.pl-3.p-20 {
-		display:none;
+		.flex.absolute.inset-y-0.left-0.items-center.pl-3.pointer-events-none {
+		display:none!important;
 	}
